# MegaParse

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.gpu  Makefile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  release-please-config.json  release-please-manifest.json  setup.py  test.ipynb  test.py
.aws/: task_definition.json
.github/workflows/: CI.yml  build-and-deploy.yml  build-gpu.yml  python-publish.yml  release-please.yml  test-build-docker.yml
benchmark/: README.md  process_single_doc.py  process_time.py  test_quality_sim.py
docs/: archive.txt
evaluations/: script.py
input/: CDP_QUAL_CHART_01_CHARTE PRODUITS_2023.12.13.docx
libs/megaparse/: CHANGELOG.md  README.md  bench.md  program.prof  pyproject.toml
libs/megaparse/examples/: parse_file_fast.py  parse_file_mp.py  parse_file_unstructured.py
libs/megaparse/scripts/: download_nltk_data.py
libs/megaparse/src/api/: app.py  megaparse_service.py
libs/megaparse/src/api/utils/: load_ssl.py
libs/megaparse/src/megaparse/: __init__.py  megaparse.py
libs/megaparse/src/megaparse/api/: app.py
libs/megaparse/src/megaparse/api/exceptions/: megaparse_exceptions.py
libs/megaparse/src/megaparse/api/models/: base.py
libs/megaparse/src/megaparse/checker/: format_checker.py
libs/megaparse/src/megaparse/configs/: auto.py
libs/megaparse/src/megaparse/examples/: parse_file.py  parsing_process.py
libs/megaparse/src/megaparse/exceptions/: base.py
libs/megaparse/src/megaparse/formatter/: base.py
libs/megaparse/src/megaparse/formatter/structured_formatter/: __init__.py  custom_structured_formatter.py
libs/megaparse/src/megaparse/formatter/structured_output/: __init__.py
libs/megaparse/src/megaparse/formatter/table_formatter/: __init__.py  llm_table_formatter.py  vision_table_formatter.py
libs/megaparse/src/megaparse/formatter/unstructured_formatter/: __init__.py  md_formatter.py
libs/megaparse/src/megaparse/layout_detection/: layout_detector.py  output.py
libs/megaparse/src/megaparse/layout_detection/models/: output.py
libs/megaparse/src/megaparse/models/: document.py  page.py
libs/megaparse/src/megaparse/parser/: __init__.py  base.py  builder.py  doctr_parser.py  llama.py  megaparse_vision.py  strategy.py  unstructured_parser.py
libs/megaparse/src/megaparse/predictor/: doctr_layout_detector.py  layout_predictor.py
libs/megaparse/src/megaparse/predictor/models/: base.py
libs/megaparse/src/megaparse/utils/: extract_metadata.py  onnx.py  strategy.py  strategy_utils.py
libs/megaparse/tests/: conftest.py  test_endpoints.py  test_import.py  test_parsers.py
libs/megaparse/tests/certs/: client-cert.pem  client-key.pem
libs/megaparse/tests/docx/: test_docx_processing.py
libs/megaparse/tests/epub/: test_epub_processing.py
libs/megaparse/tests/html/: test_html_processing.py
libs/megaparse/tests/odt/: test_odt_processing.py
libs/megaparse/tests/pdf/: test_all_parsers.py  test_detect_ocr.py  test_doctr_parser.py  test_pdf_processing.py  test_pdfium_parser.py  test_unstructured_parser.py
libs/megaparse/tests/pptx/: test_pptx_processing.py
libs/megaparse/tests/supported_docs/: file-sample_500kB.odt  sample.csv  sample.doc  sample.json  sample.md  sample.ppt  sample.txt  sample.xml  sample_complexe.html
libs/megaparse/tests/xls/: test_xls_processing.py
libs/megaparse_schema/: README.md  pyproject.toml
libs/megaparse_schema/src/megaparse_schema/: mp_exceptions.py
libs/megaparse_sdk/: CHANGELOG.md  README.md  pyproject.toml
libs/megaparse_sdk/examples/: usage_example.py
libs/megaparse_sdk/megaparse_sdk/: __init__.py  client.py  config.py
libs/megaparse_sdk/megaparse_sdk/endpoints/: file_upload.py  url_upload.py
libs/megaparse_sdk/megaparse_sdk/schema/: document.py  extensions.py  languages.py  mp_exceptions.py  mp_inputs.py  mp_outputs.py  parser_config.py  supported_models.py
libs/megaparse_sdk/megaparse_sdk/utils/: load_ssl.py
libs/megaparse_sdk/tests/: test_nats_client.py  test_service.py
libs/megaparse_sdk/tests/certs/: rootCA.pem
megaparse/: CHANGELOG.md  Converter.py  __init__.py  base_element.py  main.py  markdown_element.py  markdown_processor.py  requirements.txt  test.py  unstructured.py  unstructured_convertor.py
megaparse/api/: app.py  general.py
megaparse/api/models/: base.py
megaparse/api/utils/: exceptions.py  type.py
megaparse/cdp/utils/: diff_agent.py  evaluation_utils.py  query_engine.py  question_generator.py
megaparse/checker/: format_checker.py  markdown_processor.py
megaparse/core/: main.py  megaparse.py
megaparse/core/example/: run_simple_parser.py
megaparse/core/formatter/: formatter.py
megaparse/core/parser/: __init__.py  base.py  builder.py  entity.py  llama.py  megaparser.py  (+3 more)
megaparse/multimodal_convertor/: llm_megaparse.py  megaparse_vision.py
megaparse/parser/: __init__.py  llama.py  megaparse_vision.py  megaparser.py  unstructured_parser.py
megaparse/sdk/: README.md  __init__.py  pyproject.toml
megaparse/sdk/examples/: process_time.py  usage_example.py
megaparse/sdk/megaparse_sdk/: __init__.py  client.py  config.py
megaparse/sdk/megaparse_sdk/endpoints/: file_upload.py  url_upload.py
megaparse/sdk/src/: __init__.py  client.py
megaparse/sdk/src/endpoints/: file_upload.py  url_upload.py
megaparse/sdk/utils/: type.py
megaparse/tests/: test.py
notebooks/: chunking.ipynb  diff_agent_demo.ipynb  evaluate.ipynb  evaluate_diff_agent.ipynb  query_pdf.ipynb  question_generator.ipynb  raw_chunking.ipynb
output/: CDP_QUAL_CHART_01_CHARTE PRODUITS_2023.12.13.md  CDP_QUAL_CHART_01_CHARTE PRODUITS_2023.12.13_MAMOTH.md
src/: Converter.py  utils.py
tests/: conftest.py  test_endpoints.py  test_import.py
tests/docx/: test_docx_processing.py
tests/epub/: test_epub_processing.py
tests/html/: test_html_processing.py
tests/odt/: test_odt_processing.py
tests/pdf/: test_pdf_processing.py
tests/pptx/: test_pptx_processing.py
tests/xls/: test_xls_processing.py
(+10 files in other folders)
