[project]
name = "megaparse"
version = "0.0.33"
description = "Parse complex files (PDF,Docx,PPTX) for LLM consumption"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" },
    { name = "Chloé Daems", email = "chloe@quivr.app" }
]

readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "mammoth>=1.8.0",
    "python-dotenv>=1.0.0",

]

[project.optional-dependencies]
core = [
    "pycryptodome>=3.21.0",
    "llama-index>=0.10.0",
    "pdfplumber>=0.11.0",
    "backoff>=2.2.1",
    "pypdf>=5.0.1",
    "psutil>=6.1.0",
    "numpy<=2.0.0",
    "playwright>=1.47.0",
    "langchain-anthropic>=0.2.3",
    "python-magic>=0.4.27",
    "unstructured[all-docs]>=0.15.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "llama-parse>=0.4.0",
]
api = [
    "uvicorn>=0.32.0",
    "fastapi>=0.115.2",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
]

all = [
    "megaparse[core]"
    "megaparse[api]
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
python = "3.11.9"
managed = true
universal = true
dev-dependencies = [
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "ruff>=0.6.0",
    "flake8>=7.1.1",
    "flake8-black>=0.3.6",
    "pytest-asyncio>=0.23.8",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["megaparse"]
