[project]
name = "megaparse"
version = "0.0.53"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" },
    { name = "Chloé Daems", email = "chloe@quivr.app" },
    { name = "Amine Dirhoussi", email = "amine@quivr.app" },
    { name = "Jacopo Chevallard", email = "jacopo@quivr.app" },
]

readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "megaparse-sdk",
    "pycryptodome>=3.21.0",
    "pdfplumber>=0.11.0",
    "backoff>=2.2.1",
    "pypdf>=5.0.1",
    "psutil>=6.1.0",
    "numpy<=2.0.0",
    "playwright>=1.47.0",
    "langchain-anthropic>=0.1.23",
    "python-magic>=0.4.27",
    "unstructured[all-docs]==0.15.0",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.1.21",
    "langchain-core>=0.3,<0.4",
    "llama-parse>=0.4.0",
    "pydantic-settings>=2.6.1",
    "onnxruntime==1.20.0; platform_machine == 'x86_64'",
    "onnxruntime-gpu==1.20.0; platform_machine == 'x86_64'",
    "onnxtr[gpu-headless]>=0.6.0; platform_machine == 'x86_64'",
    "onnxtr[cpu]>=0.6.0; platform_machine != 'x86_64'",
    "pypdfium2>=4.30.0",
]

[project.optional-dependencies]
api = [
    "python-dotenv>=1.0.0",
    "uvloop>=0.18.0",
    "pydantic-settings>=2.6.1",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.2",
    "ratelimit>=2.2.1",

]


[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/megaparse", "src/api"]
