[project]
name = "megaparse-schema"
version = "0.1.0"
description = "megaparse internal schema"
authors = [{ name = "aminediro", email = "aminedirhoussi@gmail.com" }]
dependencies = ["pydantic>=2.9.2", "pydantic-settings>=2.6.1"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/megaparse_schema"]
