[project]
name = "megaparse-sdk"
version = "0.1.12"
description = "Megaparse SDK"
dependencies = [
    "python-dotenv>=1.0.0",
    "pycryptodome>=3.21.0",
    "psutil>=6.1.0",
    "httpx>=0.27.0",
    "nats-py>=2.9.0",
    "loguru>=0.7.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
]

readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["megaparse_sdk"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
