[project]
name = "megaparse-sdk"
version = "0.1.0"
description = "Megaparse SDK"
dependencies = [
    "mammoth>=1.8.0",
    "llama-parse>=0.4.0",
    "unstructured[all-docs]>=0.15.0",
    "python-dotenv>=1.0.0",
    "pycryptodome>=3.21.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.1",
    "psutil>=6.1.0",
    "numpy<=2.0.0",
    "python-magic>=0.4.27",
]

readme = "README.md"
requires-python = "< 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["megaparse_sdk"]
